# pangine

./: CITATION.cff  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  rustfmt.toml
.github/workflows/: ci.yml
examples/: induction.rs  semantic_memory.rs
src/: engine.rs  lib.rs  relevance.rs
src/engine/: research.rs
src/engine/research/: unified_state_oracle.rs
tests/: concept_lifetime.rs  experience_question_semantics.rs  one_x_parity.rs  parse_results.rs  research.rs  three_x_integration.rs  two_x_integration.rs
tests/fixtures/1x/: test_counting.pae  test_decision.pae  test_experience.pae  test_merge.pae  test_pangine.pae  test_question.pae  test_rule110.pae  test_syllogism.pae
tests/research/: README.md  classified_collections.rs  observation_collection_syntax.rs  unified_concept_state.rs
tests/support/: mod.rs
